поправил по замечаниям

--- a/catalog.html
+++ b/catalog.html
@@ -106,8 +106,8 @@
                 ></a>
               </p>
               <p class="user-menu-wrapper">
-                <a hreh="#" title="переход в заказы"><span class="user-menu user-menu-orders">Мои заказы</span></a>
-                <a hreh="#" title="переход в кабинет"><span class="user-menu user-menu-cabinet">Личный кабинет</span></a>
+                <a href="#" title="переход в заказы"><span class="user-menu user-menu-orders">Мои заказы</span></a>
+                <a href="#" title="переход в кабинет"><span class="user-menu user-menu-cabinet">Личный кабинет</span></a>
               </p>
             </div>
           </section>
