--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="slider-controls">
                   <button class="slider-control slider-control-one current" type="button" aria-label="Первый слайд"></button>
-                  <button class="slider-control slider-control-two"type="button" aria-label="Второй слайд"></button>
+                  <button class="slider-control slider-control-two" type="button" aria-label="Второй слайд"></button>
                 </div>
                 <a class="button" href="catalog.html">открыть каталог</a>
               </section>
@@ -585,7 +585,7 @@
                 height="158"
                 alt="карта"
               />
-              <a class="button contacts-button" type="button">
+              <a href="#" class="button contacts-button">
                 Заблудились? Напишите НАМ!
               </a>
             </div>
