удалил лишние подключенные файлы  js

--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
       <div class="main-container">
         <div class="main-container-wrapper">
           <section class="main-menu center">
-            <a class="main-menu-logo" href="index.html" tabindex="0">
+            <a class="main-menu-logo" href="index.html" tabindex="0" target="_blank">
               <img
                 src="img/logo-t.svg"
                 width="108"
@@ -986,7 +986,6 @@
         ></path>
       </symbol>
     </svg>
-    <script src="js/catalog.js"></script>
     <script src="js/catalog.min.js"></script>
   </body>
 </html>
