добавил ссылку на страницу

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                 height="158"
                 alt="карта"
               />
-              <a href="#" class="button contacts-button">
+              <a href="writeus.html" class="button contacts-button">
                 Заблудились? Напишите НАМ!
               </a>
             </div>
@@ -706,7 +706,7 @@
           <p>
             <span>Текст письма:</span><br />
             <label class="visually-hidden" for="textarea"></label>
-            <textarea id="textarea" rows="3">В свободной форме </textarea><br />
+            <textarea id="textarea" class="textarea" rows="3">В свободной форме </textarea><br />
           </p>
         </div>
         <div class="button-wrapper">
