добавил ссылку на страницу

--- a/writeus.html
+++ b/writeus.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/normalize.css" rel="stylesheet" />
+    <link href="css/style.min.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="main-info-container">
+        <p class="main-contacts">
+          <span>
+            <a href="tel:+78125550555">
+              <svg height="20" width="20">
+                <use xlink:href="#phone"></use>
+              </svg>
+              +7&nbsp;(812)&nbsp;555-05-55
+            </a>
+          </span>
+        </p>
+        <span class="main-contacts-address"
+          >г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span
+        >
+      </div>
     
 </body>
 </html>
